--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,19 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="container-fluid">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-    <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+  <header>
+    <h2>{{ page.title }}</h2>
+    <p class="text-muted">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
   </header>
 
-  <article class="post-content">
+  <article>
     {{ content }}
   </article>
 
+  <div class="clearfix">
+    {% if page.previous %}<a href="{{ page.previous.url | prepend: site.baseurl }}" class="pull-left"><< 上一篇</a>{% endif %}
+    {% if page.next %}<a href="{{ page.next.url | prepend: site.baseurl }}" class="pull-right">下一篇 >></a>{% endif %}
+  </div>
 </div>
